add hover to edit relation

--- a/gifts/templates/gifts/components/edit_gift_relation_form.html
+++ b/gifts/templates/gifts/components/edit_gift_relation_form.html
@@ -1,5 +1,5 @@
 <form id="edit_relation_form" onsubmit="updateRelation('{{relation.id}}')">
-  <h4>Editing Put user in here </h4>
+  <h4>Editing {{relation.contributor.first_name}} </h4>
   <div class="col s12 m6 l4">
     {{form.participation_status.label_tag}}
     {{form.participation_status}}
