--- a/gifts/templates/gifts/components/gift_progress_component.html
+++ b/gifts/templates/gifts/components/gift_progress_component.html
@@ -33,7 +33,7 @@
     <br />
     <p>
       People contributing:
-      {{gift.get_contributor_count}}/{{gift.get_all_participants|length}}
+      {{gift.get_contributor_count}}/{{gift.get_all_gift_members|length}}
     </p>
     <p>Confirmed Payments: {{gift.get_confirmed_payment_count}}</p>
   </div>
