--- a/uac/templates/register/register.html
+++ b/uac/templates/register/register.html
@@ -34,17 +34,18 @@
           </div>
 
           {% if form.errors %} 
-            {% for field in form %} {% for error in
-            field.errors %}
-            <div class="red-text">
-              <strong>{{ error|escape }}</strong>
-            </div>
-            {% endfor %} 
-            {% for error in form.non_field_errors %}
-            <div class="red-text">
-              <strong>{{ error|escape }}</strong>
-            </div>
-            {% endfor %} 
+            {% for field in form %} 
+              {% for error in field.errors %}
+              <div class="red-text">
+                <strong>{{ error|escape }}</strong>
+              </div>
+              {% endfor %} 
+              {% for error in form.non_field_errors %}
+                <div class="red-text">
+                  <strong>{{ error|escape }}</strong>
+                </div>
+              {% endfor %} 
+            {% endfor %}
           {% endif %}
 
           <p class="right">
